Update and rename 1st.html to index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </ul>
         </div>
         <p>Click below to begin rating your thumbnails!</p>
-        <a href="index.html" class="start-button">Start Rating</a>
+        <a href="site.html" class="start-button">Start Rating</a>
     </div>
 </body>
 </html>
